force-app/main/default/objects/VIFacture__c/VIFacture__c.object-meta.xml
<CustomObject>
    <label>Facture</label>
    <nameField>
        <label>Nom de Facture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>