force-app/main/default/objects/VIFacture__c/fields/Affaire_a_recalculer__c.field-meta.xml
<CustomField>
    <fullName>Affaire_a_recalculer__c</fullName>
    <formula>LastModifiedDate&gt; Affaire__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affaire à recalculer</label>
    <type>Checkbox</type>
</CustomField>