force-app/main/default/objects/VIFacture__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <formula>Affaire__r.Produit_SousDomaine__r.Code_BU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BU</label>
    <type>Text</type>
</CustomField>