force-app/main/default/objects/VIFacture__c/fields/Date_d_ouverture_d_affaire__c.field-meta.xml
<CustomField>
    <fullName>Date_d_ouverture_d_affaire__c</fullName>
    <formula>Affaire__r.Date_ouverture_affaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date d&apos;ouverture d&apos;affaire</label>
    <type>Date</type>
</CustomField>