force-app/main/default/objects/VIFacture__c/fields/Date_de_SAV_reelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_SAV_reelle__c</fullName>
    <formula>Affaire__r.Date_de_SAV_reelle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de SAV réelle</label>
    <type>Date</type>
</CustomField>