force-app/main/default/objects/VIFacture__c/fields/Facture_SAV_Comptabilisee__c.field-meta.xml
<CustomField>
    <fullName>Facture_SAV_Comptabilisee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indique que la ligne a été envoyée en comptabilité</inlineHelpText>
    <label>Facture SAV Comptabilisée</label>
    <type>Checkbox</type>
</CustomField>