force-app/main/default/objects/VIFacture__c/fields/Facture_SAV_traitee__c.field-meta.xml
<CustomField>
    <fullName>Facture_SAV_traitee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture SAV traitée</label>
    <type>Checkbox</type>
</CustomField>