force-app/main/default/objects/VIFacture__c/fields/Facture_sur_Affaire_SAV__c.field-meta.xml
<CustomField>
    <fullName>Facture_sur_Affaire_SAV__c</fullName>
    <formula>if( Affaire__r.Date_de_SAV_reelle__c &lt;  Date_de_comptabilisation__c  ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facture sur Affaire SAV</label>
    <type>Checkbox</type>
</CustomField>