force-app/main/default/objects/VIFacture__c/fields/Montant_HTE__c.field-meta.xml
<CustomField>
    <fullName>Montant_HTE__c</fullName>
    <label>Montant HT €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>