force-app/main/default/objects/VIFacture__c/fields/Montant_Paye__c.field-meta.xml
<CustomField>
    <fullName>Montant_Paye__c</fullName>
    <label>Montant Payé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>