force-app/main/default/objects/VIFacture__c/fields/Montant_TTCE__c.field-meta.xml
<CustomField>
    <fullName>Montant_TTCE__c</fullName>
    <label>Montant TTC €</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>