force-app/main/default/objects/VIFacture__c/fields/Montant_TVA__c.field-meta.xml
<CustomField>
    <fullName>Montant_TVA__c</fullName>
    <label>Montant TVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>