force-app/main/default/objects/VIFacture__c/fields/Montant_TVAE__c.field-meta.xml
<CustomField>
    <fullName>Montant_TVAE__c</fullName>
    <label>Montant TVA €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>