force-app/main/default/objects/VIFacture__c/fields/MtEncaisse__c.field-meta.xml
<CustomField>
    <fullName>MtEncaisse__c</fullName>
    <label>MtEncaissé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>