force-app/main/default/objects/VIFacture__c/fields/PV_de_l_affaire__c.field-meta.xml
<CustomField>
    <fullName>PV_de_l_affaire__c</fullName>
    <formula>Affaire__r.Budget_PV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV de l&apos;affaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>