force-app/main/default/objects/VIFacture__c/fields/Sous_chapitre__c.field-meta.xml
<CustomField>
    <fullName>Sous_chapitre__c</fullName>
    <label>Sous_chapitre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>