force-app/main/default/objects/VIFacture__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RGC</fullName>
            </value>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>FAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>