force-app/main/default/objects/VIFacture__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Affaire__c</columns>
    <columns>Compte__c</columns>
    <columns>Date__c</columns>
    <columns>Date_echeance__c</columns>
    <columns>Montant_HT__c</columns>
    <columns>Montant_Paye__c</columns>
    <columns>Periode_comptable__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>